# dnsTun

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BlockingQueue.hpp  DnsClientChannel.h  DnsServerChannel.h  Log.h  Packet.h  net.h  udp.h
src/lib/: AnyPointer.hpp  Bytes.hpp  Log.cpp  aes.cpp  aes.hpp  base36.cpp  base36.h  bytes.cpp  strings.cpp  strings.h
src/net/: net.cpp  udp.cpp
src/protocol/: Dns.cpp  Dns.h  DnsClientChannel.cpp  DnsServerChannel.cpp  Packet.cpp  packetProcess.cpp  packetProcess.h
test/: CMakeLists.txt  DiscardClient.h  EchoClient.hpp  EchoServer.hpp  TimeServer.hpp  test2.cpp  testDns.cpp  testDns.h  test_main.cpp
